# boris-algorithm

./: README.md  boris.m  boris.py  boris_rotaion.m
boris in C/: Makefile.am  boris.c  configure.ac  positionplot.m
